@@ -1,5 +1,12 @@
 2021-04-23  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
+	[cid] s/FT_ALLOC/FT_QALLOC/ and clean up.
+
+	* src/cid/cidgload.c (cid_load_glyph): Do not zero out the buffer.
+        * src/cid/cidload.c (cid_face_open, cid_read_subrs): Ditto.
+
+2021-04-23  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
 	[pfr] s/FT_ALLOC/FT_QALLOC/ for initialized buffers.
 
 	* src/pfr/pfrload.c (pfr_extra_item_load_font_id, pfr_aux_name_load):
